--- a/SlidingMenuExample/app/src/main/res/layout/switch_button.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/switch_button.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Switch xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="60dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/switch1"
     android:checked="false"
-    android:textOff="No"
-    android:textOn="Yes"
-    android:layout_alignParentBottom="true"
+    android:showText="true"
+    android:textOff="@string/no"
+    android:textOn="@string/yes"
+    android:textColor="#ffffff"
+    android:layout_alignParentRight="true"
+    android:layout_alignParentEnd="true"
+    android:layout_marginTop="20dp"
+    android:layout_marginBottom="20dp"
+    android:layout_marginRight="102dp"
+    android:layout_marginEnd="102dp"
     android:layout_marginLeft="53dp"
     android:layout_marginStart="53dp"
     />
