--- a/SlidingMenuExample/app/src/main/res/layout/switch_button.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/switch_button.xml
@@ -15,5 +15,4 @@
     android:layout_marginRight="102dp"
     android:layout_marginEnd="102dp"
     android:layout_marginLeft="53dp"
-    android:layout_marginStart="53dp"
-    />
+    android:layout_marginStart="53dp" />
