arbete under statistik

--- a/SlidingMenuExample/app/src/main/res/values/colors.xml
+++ b/SlidingMenuExample/app/src/main/res/values/colors.xml
@@ -2,5 +2,8 @@
 <resources>
     <color name="colorPrimary">#37ba53</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#339933</color>
+    <color name="colorAccent">#36b550</color>
+    <color name="colorAccentCheckBox">#f8f8f8</color>
+    <color name="colorUncheckedBox">#298029</color>
+    <color name="apptheme_color">#476903</color>
 </resources>
