--- a/SlidingMenuExample/app/src/main/res/values/styles.xml
+++ b/SlidingMenuExample/app/src/main/res/values/styles.xml
@@ -6,6 +6,12 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <!--<item name="android:checkboxStyle">@style/CheckBoxAppTheme</item>-->
     </style>
+    <!--<style name="CheckBoxAppTheme" parent="android:Widget.CompoundButton.CheckBox">
+        <item name="android:button">@drawable/apptheme_btn_check_holo_light</item>
+    </style>
+-->
 
 </resources>
