--- a/SlidingMenuExample/app/src/main/res/layout/add_variable.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/add_variable.xml
@@ -142,7 +142,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_marginTop="100dp">
+                android:layout_marginTop="100dp"
+                android:layout_marginBottom="20dp">
 
                 <Button
                     android:layout_width="wrap_content"
@@ -157,7 +158,8 @@
                     android:layout_weight="0"
                     android:layout_gravity="bottom|center"
                     android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true" />
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="30dp" />
             </RelativeLayout>
 
         </LinearLayout>
