--- a/SlidingMenuExample/app/src/main/res/layout/group_members.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/group_members.xml
@@ -24,7 +24,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Group members"
+                    android:text="title"
                     android:textSize="30sp"
                     android:layout_gravity="center_horizontal"
                     android:layout_margin="20dp"
@@ -83,10 +83,9 @@
             <RelativeLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="156dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:layout_weight="0.15"
                 android:layout_marginBottom="50dp">
 
                 <EditText
@@ -95,33 +94,34 @@
                     android:inputType="textPersonName"
                     android:id="@+id/search_user"
                     android:hint="Enter username"
-                    android:textSize="20dp"
+                    android:textSize="20sp"
                     android:textColor="#ffffff"
                     android:textColorHint="#ffffff"
                     android:backgroundTint="@android:color/white"
                     android:layout_gravity="center_horizontal|right"
                     android:maxLength="15"
-                    android:layout_alignParentTop="true"
+                    android:layout_alignBottom="@+id/add_member"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_marginLeft="27dp"
-                    android:layout_marginStart="27dp" />
+                    android:layout_marginLeft="20dp" />
 
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Add member"
                     android:id="@+id/add_member"
-                    android:padding="15dp"
-                    android:textSize="15dp"
+                    android:textSize="15sp"
                     android:textColor="#167165"
                     android:background="@drawable/mybutton"
                     android:onClick="onButtonClick"
                     android:layout_weight="0"
                     android:layout_gravity="right"
                     android:layout_alignParentTop="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true" />
+                    android:layout_toRightOf="@+id/search_user"
+                    android:layout_toEndOf="@+id/search_user"
+                    android:layout_marginLeft="20dp"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp" />
 
                 <Button
                     android:layout_width="wrap_content"
