--- a/SlidingMenuExample/app/src/main/res/layout/add_values.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/add_values.xml
@@ -27,12 +27,13 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:id="@+id/scrollView3"
 
         android:layout_below="@+id/top"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/relativeLayout">
 
         <TableLayout
             android:layout_width="match_parent"
@@ -56,7 +57,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="30dp">
+        android:layout_marginBottom="30dp"
+        android:id="@+id/relativeLayout">
 
 
         <ImageButton
@@ -68,9 +70,9 @@
             android:textColor="#157065"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
-            android:layout_marginRight="45dp"
-            android:layout_marginEnd="45dp"
-            android:layout_alignBottom="@+id/submit_button2"
+            android:layout_marginRight="50dp"
+            android:layout_marginEnd="50dp"
+            android:layout_alignTop="@+id/submit_button2"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
@@ -88,7 +90,7 @@
             android:paddingRight="5dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="40dp" />
+            android:layout_marginTop="10dp" />
     </RelativeLayout>
 
 </RelativeLayout>
