--- a/SlidingMenuExample/app/src/main/res/layout/fragment2.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/fragment2.xml
@@ -14,18 +14,21 @@
 
     <com.jjoe64.graphview.GraphView
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="217dp"
         android:id="@+id/graph"
         android:layout_marginLeft="10dp"
         android:layout_marginRight ="10dp"
         android:layout_marginTop="0dp"
         android:layout_alignParentTop="true"/>
 
+
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/listView"
-        android:headerDividersEnabled="false"
-        style="@style/Base.Widget.AppCompat.ListView" />
+        android:divider="@color/divider_white"
+        android:dividerHeight="0.25dp"
+
+         />
 
 </LinearLayout>
