--- a/SlidingMenuExample/app/src/main/res/layout/group_var.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/group_var.xml
@@ -70,8 +70,8 @@
                 </LinearLayout>
 
                 <ListView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="173dp"
                     android:id="@+id/shared_var_list" />
             </LinearLayout>
 
@@ -106,8 +106,8 @@
                 </LinearLayout>
 
                 <ListView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="187dp"
                     android:id="@+id/unshared_var_list" />
             </LinearLayout>
 
