--- a/SlidingMenuExample/app/src/main/res/layout/selected_group.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/selected_group.xml
@@ -93,7 +93,8 @@
                     android:layout_gravity="center_horizontal|bottom"
                     android:layout_below="@+id/edit_var"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="30dp" />
+                    android:layout_marginTop="30dp"
+                    android:layout_marginBottom="30dp" />
             </RelativeLayout>
 
         </LinearLayout>
