--- a/SlidingMenuExample/app/src/main/res/layout/add_values.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/add_values.xml
@@ -81,7 +81,7 @@
             style="?android:textAppearanceSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/submit"
+            android:text="submit"
             android:textStyle="bold"
             android:background="@drawable/mybutton"
             android:textColor="#157065"
