--- a/SlidingMenuExample/app/src/main/res/layout/statistics.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/statistics.xml
@@ -58,7 +58,8 @@
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="30dp">
 
                 <LinearLayout
                     android:orientation="vertical"
