--- a/SlidingMenuExample/app/src/main/res/layout/change_password.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/change_password.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Change your password."
+        android:text="Change password"
         android:id="@+id/textView6"
         android:textSize="30dp"
         android:layout_alignParentTop="true"
@@ -55,7 +55,10 @@
                 android:id="@+id/username"
                 android:hint="Current password"
                 android:textSize="15dp"
-                android:layout_marginLeft="25dp" />
+                android:layout_marginLeft="25dp"
+                android:textColor="#ffffff"
+                android:textColorHint="#ffffff"
+                android:backgroundTint="@android:color/white"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -76,7 +79,10 @@
                 android:hint="@string/prompt_password"
                 android:id="@+id/password"
                 android:textSize="15dp"
-                android:layout_marginLeft="25dp" />
+                android:layout_marginLeft="25dp"
+                android:textColor="#ffffff"
+                android:textColorHint="#ffffff"
+                android:backgroundTint="@android:color/white"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -97,7 +103,10 @@
                 android:hint="@string/prompt_password"
                 android:id="@+id/confirm_password"
                 android:textSize="15dp"
-                android:layout_marginLeft="25dp" />
+                android:layout_marginLeft="25dp"
+                android:textColor="#ffffff"
+                android:textColorHint="#ffffff"
+                android:backgroundTint="@android:color/white"/>
 
             <Button
                 android:layout_width="wrap_content"
