--- a/SlidingMenuExample/app/src/main/res/layout/activity_login.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/activity_login.xml
@@ -27,6 +27,10 @@
         <LinearLayout
             android:id="@+id/email_login_form"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -63,7 +67,7 @@
                     android:inputType="textEmailAddress"
                     android:layout_weight="0.7"
                     android:maxLines="1"
-                    android:imeActionId="@+id/password"
+                    android:imeActionId="@+id/new_password"
                     android:singleLine="true"
                     android:layout_marginLeft="15dp"
                     android:orientation="vertical"
@@ -89,7 +93,7 @@
                     android:src="@drawable/lock"/>
 
                 <EditText
-                    android:id="@+id/password"
+                    android:id="@+id/new_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_password"
@@ -151,6 +155,7 @@
                 android:onClick="onButtonClick"
                 android:textSize="15dp" />
 
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
