--- a/SlidingMenuExample/app/src/main/res/layout/change_password.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/change_password.xml
@@ -2,127 +2,134 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bakgrund"
-    android:orientation="vertical"
-    android:weightSum="1">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Change password"
-        android:id="@+id/textView6"
-        android:textSize="30dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_alignStart="@+id/textView3"
-        android:layout_alignRight="@+id/textView7"
-        android:layout_alignEnd="@+id/textView7"
-        android:textColor="#ffffff"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="15dp" />
+    android:background="@drawable/bakgrund">
 
     <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/scrollView"
         android:layout_marginTop="15dp">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_gravity="top|left"
             android:layout_margin="20dp"
-            android:nestedScrollingEnabled="false"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Current password"
-                android:id="@+id/textView8"
-                android:textSize="20dp"
-                android:layout_marginLeft="25dp"
-                android:textColor="#ffffff" />
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:ems="10"
-                android:id="@+id/username"
-                android:hint="Current password"
-                android:textSize="15dp"
-                android:layout_marginLeft="25dp"
-                android:textColor="#ffffff"
-                android:textColorHint="#ffffff"
-                android:backgroundTint="@android:color/white"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Change password"
+                    android:id="@+id/textView6"
+                    android:textSize="30dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignLeft="@+id/textView3"
+                    android:layout_alignStart="@+id/textView3"
+                    android:layout_alignRight="@+id/textView7"
+                    android:layout_alignEnd="@+id/textView7"
+                    android:textColor="#ffffff"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_gravity="top|center_horizontal" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="New password"
-                android:id="@+id/textView10"
-                android:textSize="20dp"
-                android:textColor="#ffffff"
-                android:layout_marginLeft="25dp"
-                android:layout_marginTop="30dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="Current password"
+                    android:id="@+id/textView8"
+                    android:textSize="20dp"
+                    android:layout_marginLeft="25dp"
+                    android:textColor="#ffffff"
+                    android:layout_marginTop="30dp" />
 
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:ems="10"
-                android:hint="@string/prompt_password"
-                android:id="@+id/password"
-                android:textSize="15dp"
-                android:layout_marginLeft="25dp"
-                android:textColor="#ffffff"
-                android:textColorHint="#ffffff"
-                android:backgroundTint="@android:color/white"/>
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:ems="10"
+                    android:hint="Enter here"
+                    android:textCursorDrawable="@null"
+                    android:id="@+id/current_password"
+                    android:textSize="18dp"
+                    android:layout_marginLeft="30dp"
+                    android:textColor="#ffffff"
+                    android:textColorHint="#ffffff"
+                    android:backgroundTint="@android:color/white"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Confirm new password"
-                android:id="@+id/textView11"
-                android:textSize="20dp"
-                android:textColor="#ffffff"
-                android:layout_marginLeft="25dp"
-                android:layout_marginTop="30dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="New password"
+                    android:id="@+id/textView10"
+                    android:textSize="20dp"
+                    android:textColor="#ffffff"
+                    android:layout_marginLeft="25dp"
+                    android:layout_marginTop="30dp" />
 
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:ems="10"
-                android:hint="@string/prompt_password"
-                android:id="@+id/confirm_password"
-                android:textSize="15dp"
-                android:layout_marginLeft="25dp"
-                android:textColor="#ffffff"
-                android:textColorHint="#ffffff"
-                android:backgroundTint="@android:color/white"/>
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:ems="10"
+                    android:textCursorDrawable="@null"
+                    android:id="@+id/new_password"
+                    android:textSize="18dp"
+                    android:hint="Enter here"
+                    android:layout_marginLeft="30dp"
+                    android:textColor="#ffffff"
+                    android:textColorHint="#ffffff"
+                    android:backgroundTint="@android:color/white"/>
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Change password"
-                android:id="@+id/change_pwd"
-                android:padding="15dp"
-                android:textSize="20dp"
-                android:textColor="#167165"
-                android:background="@drawable/mybutton"
-                android:onClick="onButtonClick"
-                android:layout_gravity="center_horizontal|bottom"
-                android:layout_below="@+id/textconfirmpassword"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="50dp"
-                android:layout_marginBottom="40dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="Confirm new password"
+                    android:id="@+id/textView11"
+                    android:textSize="20dp"
+                    android:textColor="#ffffff"
+                    android:layout_marginLeft="25dp"
+                    android:layout_marginTop="30dp" />
+
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:ems="10"
+                    android:hint="Enter here"
+                    android:textCursorDrawable="@null"
+                    android:id="@+id/confirm_password"
+                    android:textSize="18dp"
+                    android:layout_marginLeft="30dp"
+                    android:textColor="#ffffff"
+                    android:textColorHint="#ffffff"
+                    android:backgroundTint="@android:color/white"/>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Change password"
+                    android:id="@+id/change_pwd"
+                    android:padding="15dp"
+                    android:textSize="20dp"
+                    android:textColor="#167165"
+                    android:background="@drawable/mybutton"
+                    android:onClick="onButtonClick"
+                    android:layout_gravity="center_horizontal|bottom"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignRight="@+id/textView11"
+                    android:layout_alignEnd="@+id/textView11"
+                    android:layout_marginTop="40dp"
+                    android:layout_marginBottom="30dp" />
+            </LinearLayout>
+
 
         </LinearLayout>
     </ScrollView>
