--- a/SlidingMenuExample/app/src/main/res/layout/create_user.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/create_user.xml
@@ -95,7 +95,7 @@
                 android:inputType="textPassword"
                 android:ems="10"
                 android:hint="@string/prompt_password"
-                android:id="@+id/password"
+                android:id="@+id/new_password"
                 android:textSize="15dp"
                 android:layout_marginLeft="25dp" />
 
