--- a/SlidingMenuExample/app/src/main/res/layout/switch_button.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/switch_button.xml
@@ -7,12 +7,24 @@
     android:showText="true"
     android:textOff="@string/no"
     android:textOn="@string/yes"
-    android:textColor="#ffffff"
+    android:textColor="@color/colorAccent"
+
     android:layout_alignParentRight="true"
     android:layout_alignParentEnd="true"
     android:layout_marginTop="20dp"
     android:layout_marginBottom="20dp"
-    android:layout_marginRight="102dp"
-    android:layout_marginEnd="102dp"
-    android:layout_marginLeft="53dp"
-    android:layout_marginStart="53dp" />
+    android:layout_marginRight="70dp"
+    android:layout_marginEnd="50dp"
+    android:layout_marginLeft="50dp"
+    android:layout_marginStart="53dp"
+    style="@android:style/Theme.Holo"
+    android:height="20dp"
+    android:theme="@android:style/Theme.Holo"
+    android:drawableTint="#ffffff"
+    android:textStyle="bold"
+    android:thumbTint="@color/colorUncheckedBox"
+    android:trackTint="@color/background_floating_material_light"
+    android:textColorHint="#ffffff"
+    android:textColorHighlight="#ffffff"
+    android:textColorLink="#ffffff"
+    android:switchTextAppearance="@style/switchtext" />
