--- a/SlidingMenuExample/app/src/main/res/layout/switch_button.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/switch_button.xml
@@ -7,12 +7,12 @@
     android:showText="true"
     android:textOff="@string/no"
     android:textOn="@string/yes"
-    android:textColor="@color/colorAccent"
+    android:textColor="#ffffff"
 
     android:layout_alignParentRight="true"
     android:layout_alignParentEnd="true"
-    android:layout_marginTop="20dp"
-    android:layout_marginBottom="20dp"
+    android:layout_marginTop="37dp"
+    android:layout_marginBottom="37dp"
     android:layout_marginRight="70dp"
     android:layout_marginEnd="50dp"
     android:layout_marginLeft="50dp"
@@ -22,7 +22,7 @@
     android:theme="@android:style/Theme.Holo"
     android:drawableTint="#ffffff"
     android:textStyle="bold"
-    android:thumbTint="@color/colorUncheckedBox"
+    android:thumbTint="#35c72e"
     android:trackTint="@color/background_floating_material_light"
     android:textColorHint="#ffffff"
     android:textColorHighlight="#ffffff"
