--- a/SlidingMenuExample/app/src/main/res/layout/add_variable.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/add_variable.xml
@@ -63,8 +63,9 @@
                     android:layout_gravity="center_horizontal|right"
                     android:textColor="#ffffff"
                     android:layout_below="@+id/textView12"
-                    android:layout_toRightOf="@+id/textView12"
-                    android:layout_toEndOf="@+id/textView12" />
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginLeft="30dp" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -91,11 +92,12 @@
                     android:orientation="vertical"
                     android:layout_gravity="center_horizontal|right"
                     android:id="@+id/radioGroup"
-                    android:layout_marginRight="73dp"
-                    android:layout_marginEnd="73dp"
-                    android:layout_centerVertical="true"
+                    android:layout_marginRight="96dp"
+                    android:layout_marginEnd="96dp"
+                    android:layout_below="@+id/textView13"
                     android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true">
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="10dp">
                     <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -124,13 +126,37 @@
                     <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Scale"
+                        android:text="Rating"
                         android:textColor="#ffffff"
                         android:buttonTint="#ffffff"
                         android:id="@+id/radioButton3"
                         android:layout_below="@+id/radioButton2"
                         android:layout_alignLeft="@+id/radioButton2"
                         android:layout_alignStart="@+id/radioButton2"
+                        android:checked="false"
+                        android:textSize="20dp" />
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Hours"
+                        android:textColor="#ffffff"
+                        android:buttonTint="#ffffff"
+                        android:id="@+id/radioButton4"
+                        android:layout_below="@+id/radioButton3"
+                        android:layout_alignLeft="@+id/radioButton3"
+                        android:layout_alignStart="@+id/radioButton3"
+                        android:checked="false"
+                        android:textSize="20dp" />
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=""
+                        android:textColor="#ffffff"
+                        android:buttonTint="#ffffff"
+                        android:id="@+id/radioButton5"
+                        android:layout_below="@+id/radioButton4"
+                        android:layout_alignLeft="@+id/radioButton4"
+                        android:layout_alignStart="@+id/radioButton4"
                         android:checked="false"
                         android:textSize="20dp" />
                 </RadioGroup>
