--- a/SlidingMenuExample/app/src/main/res/layout/numberpicker_frag1.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/numberpicker_frag1.xml
@@ -4,9 +4,10 @@
         android:layout_height="102dp"
         android:id="@+id/numberPicker2"
         android:orientation="horizontal"
-
+        android:scaleX="1.3"
+        android:scaleY="1.3"
         android:layout_marginRight="60dp"
-        android:layout_marginEnd="60dp"
+        android:layout_marginEnd="65dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:theme="@android:style/Theme.DeviceDefault" />
