--- a/SlidingMenuExample/app/src/main/res/layout/numberpicker_frag1.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/numberpicker_frag1.xml
@@ -7,6 +7,8 @@
 
         android:layout_marginRight="60dp"
         android:layout_marginEnd="60dp"
+        android:scaleX="1.2"
+        android:scaleY="1.2"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:theme="@android:style/Theme.DeviceDefault" />
