--- a/SlidingMenuExample/app/src/main/res/layout/add_values.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/add_values.xml
@@ -57,15 +57,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="30dp"
-        android:id="@+id/relativeLayout">
+        android:layout_marginBottom="20dp"
+        android:id="@+id/relativeLayout"
+        android:layout_marginTop="20dp">
 
 
         <ImageButton
             android:id="@+id/add_button2"
             style="?android:textAppearanceSmall"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:background="@drawable/plus"
             android:textColor="#157065"
             android:paddingLeft="5dp"
@@ -90,7 +91,7 @@
             android:paddingRight="5dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="0dp" />
     </RelativeLayout>
 
 </RelativeLayout>
