--- a/SlidingMenuExample/app/src/main/res/layout/change_password.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/change_password.xml
@@ -2,7 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bakgrund">
+    android:background="@drawable/bakgrund"
+    android:orientation="vertical">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Change password"
+        android:id="@+id/textView6"
+        android:textSize="30dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignLeft="@+id/textView3"
+        android:layout_alignStart="@+id/textView3"
+        android:layout_alignRight="@+id/textView7"
+        android:layout_alignEnd="@+id/textView7"
+        android:textColor="#ffffff"
+        android:layout_gravity="top|center_horizontal"
+        android:layout_marginTop="15dp" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -19,23 +35,7 @@
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Change password"
-                    android:id="@+id/textView6"
-                    android:textSize="30dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignLeft="@+id/textView3"
-                    android:layout_alignStart="@+id/textView3"
-                    android:layout_alignRight="@+id/textView7"
-                    android:layout_alignEnd="@+id/textView7"
-                    android:textColor="#ffffff"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    android:layout_gravity="top|center_horizontal" />
+                android:layout_height="555dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -126,7 +126,7 @@
                     android:layout_alignParentBottom="true"
                     android:layout_alignRight="@+id/textView11"
                     android:layout_alignEnd="@+id/textView11"
-                    android:layout_marginTop="40dp"
+                    android:layout_marginTop="100dp"
                     android:layout_marginBottom="30dp" />
             </LinearLayout>
 
