--- a/SlidingMenuExample/app/src/main/res/layout/fragment6.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/fragment6.xml
@@ -62,7 +62,8 @@
                 android:textColor="#ffffff"
                 android:layout_below="@+id/imageView7"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="40dp" />
+                android:layout_marginTop="40dp"
+                android:textSize="30sp" />
         </RelativeLayout>
     </ScrollView>
 
