--- a/SlidingMenuExample/app/src/main/res/layout/fragment6.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/fragment6.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:background="@drawable/bakgrund"
     android:layout_height="match_parent">
 
     <ScrollView
@@ -18,7 +19,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Write review"
-                android:textStyle="bold"
                 android:background="@drawable/mybutton"
                 android:textColor="#157065"
                 android:textSize="20dp"
