--- a/SlidingMenuExample/app/src/main/res/layout/group_var.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/group_var.xml
@@ -30,7 +30,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Your variables"
+                    android:text="Your Activities"
                     android:textSize="30sp"
                     android:layout_gravity="center_horizontal"
                     android:layout_margin="20dp"
