--- a/SlidingMenuExample/app/src/main/res/layout/statistics.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/statistics.xml
@@ -47,7 +47,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="My variables"
+                    android:text="My Activities"
                     android:textColor="#ffffff"
                     android:textSize="20dp"
                     android:layout_marginLeft="20dp"
