--- a/SlidingMenuExample/app/src/main/res/layout/add_member.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/add_member.xml
@@ -55,6 +55,7 @@
                 android:textColorHint="#ffffff"
                 android:backgroundTint="@android:color/white"
                 android:layout_gravity="center_horizontal|right"
+                android:textCursorDrawable="@drawable/cursor_drawable"
                 android:maxLength="15"
                 android:layout_below="@+id/textView12"
                 android:layout_toRightOf="@+id/textView12"
