--- a/SlidingMenuExample/app/src/main/res/layout/change_password.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/change_password.xml
@@ -11,6 +11,7 @@
         android:text="Change password"
         android:id="@+id/textView6"
         android:textSize="30dp"
+
         android:layout_alignParentTop="true"
         android:layout_alignLeft="@+id/textView3"
         android:layout_alignStart="@+id/textView3"
@@ -54,7 +55,7 @@
                     android:inputType="textPassword"
                     android:ems="10"
                     android:hint="Enter here"
-                    android:textCursorDrawable="@null"
+                    android:textCursorDrawable="@drawable/cursor_drawable"
                     android:id="@+id/current_password"
                     android:textSize="18dp"
                     android:layout_marginLeft="30dp"
@@ -78,7 +79,7 @@
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
                     android:ems="10"
-                    android:textCursorDrawable="@null"
+                    android:textCursorDrawable="@drawable/cursor_drawable"
                     android:id="@+id/new_password"
                     android:textSize="18dp"
                     android:hint="Enter here"
@@ -104,7 +105,7 @@
                     android:inputType="textPassword"
                     android:ems="10"
                     android:hint="Enter here"
-                    android:textCursorDrawable="@null"
+                    android:textCursorDrawable="@drawable/cursor_drawable"
                     android:id="@+id/confirm_password"
                     android:textSize="18dp"
                     android:layout_marginLeft="30dp"
