--- a/SlidingMenuExample/app/src/main/res/layout/create_user.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/create_user.xml
@@ -53,6 +53,7 @@
                 android:inputType="textPersonName"
                 android:ems="10"
                 android:id="@+id/username"
+                android:textCursorDrawable="@drawable/cursor_drawable"
                 android:hint="Username"
                 android:textSize="15dp"
                 android:layout_marginLeft="25dp" />
@@ -74,6 +75,7 @@
                 android:inputType="textEmailAddress"
                 android:ems="10"
                 android:hint="Email"
+                android:textCursorDrawable="@drawable/cursor_drawable"
                 android:id="@+id/email"
                 android:textSize="15dp"
                 android:layout_marginLeft="25dp" />
@@ -96,6 +98,7 @@
                 android:ems="10"
                 android:hint="@string/prompt_password"
                 android:id="@+id/new_password"
+                android:textCursorDrawable="@drawable/cursor_drawable"
                 android:textSize="15dp"
                 android:layout_marginLeft="25dp" />
 
@@ -117,6 +120,7 @@
                 android:ems="10"
                 android:hint="@string/prompt_password"
                 android:id="@+id/confirm_password"
+                android:textCursorDrawable="@drawable/cursor_drawable"
                 android:textSize="15dp"
                 android:layout_marginLeft="25dp" />
 
