--- a/SlidingMenuExample/app/src/main/res/layout/fragment3.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/fragment3.xml
@@ -1,7 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <CalendarView
         android:id="@+id/calendarView1"
         android:layout_width="match_parent"
@@ -9,9 +8,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:dateTextAppearance="@android:style/TextAppearance.Large"
-        android:weekDayTextAppearance="@android:style/TextAppearance.Large"
-        android:layout_marginTop="52dp" />
-
-
+        android:weekDayTextAppearance="@style/Base.TextAppearance.AppCompat.Large.Inverse"
+        android:layout_marginTop="52dp"
+        android:dateTextAppearance="@style/Base.TextAppearance.AppCompat.Large.Inverse"
+        style="@style/Base.TextAppearance.AppCompat.Large.Inverse" />
 </RelativeLayout>
