--- a/LifeByME/app/src/main/res/layout/fragment6.xml
+++ b/LifeByME/app/src/main/res/layout/fragment6.xml
@@ -16,10 +16,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/about_us"
-                android:id="@+id/textView4"
+                android:id="@+id/textView2frag6"
                 android:layout_gravity="center_horizontal"
                 android:textColor="#ffffff"
-                android:layout_below="@+id/textView"
+                android:layout_below="@+id/textViewfrag6"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="10dp"
@@ -31,7 +31,6 @@
                 android:layout_gravity="center_horizontal"
                 android:src="@drawable/finaltextlogga"
                 android:id="@+id/imageView7"
-                android:layout_below="@+id/scrollView6"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="25dp" />
 
@@ -40,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="About us"
-                android:id="@+id/textView"
+                android:id="@+id/textViewfrag6"
                 android:layout_gravity="center_horizontal"
                 android:textColor="#ffffff"
                 android:layout_below="@+id/imageView7"
