--- a/LifeByME/app/src/main/res/layout/main_activity.xml
+++ b/LifeByME/app/src/main/res/layout/main_activity.xml
@@ -18,5 +18,7 @@
         android:id="@+id/lv_sliding_menu"
         android:background="#afadad"
         android:choiceMode="singleChoice"
-        android:layout_gravity="start"></ListView>
+        android:layout_gravity="start">
+
+    </ListView>
 </android.support.v4.widget.DrawerLayout>
